public added again

--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ pygmentscodefencesguesssyntax = true
     favicon_32 = "/img/favicon-32x32.png"
     favicon_16 = "/img/favicon-16x16.png"
 
-    footercontent = "/dev/null"
+    footercontent = "blog.muehlburger.at"
 
     hidecredits = false
     hidecopyright = false
