--- a/config.toml
+++ b/config.toml
@@ -1,32 +1,49 @@
 baseURL = "https://blog.muehlburger.at"
+title = "Herbert Mühlburger"
+
 theme = "hugo-coder"
+
 languagecode = "en"
 defaultcontentlanguage = "en"
 
 paginate = 20
 canonifyurls = true
 
-pygmentsstyle = "bw"
+pygmentsstyle = "b2"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-#disqusShortname = "muehlburger"
+#disqusShortname = "yourdiscussshortname"
 
 [params]
+    author = "Herbert Mühlburger"
+    description = "Experienced Technology Architect and Senior Software Engineer."
+    keywords = "Herbert Mühlburger, Herbert Muehlburger, Technology Architect, Senior Software Engineer"
+    info = "Technology Architect // Senior Software Engineer"
     avatarurl = "images/avatar.jpg"
+#    footercontent = "Enter a text here."
 
-    favicon_32 = "/img/favicon-32x32.png"
-    favicon_16 = "/img/favicon-16x16.png"
+    dateformat = "January 2, 2006"
 
-    footercontent = "blog.muehlburger.at"
+    hideCredits = true
+    hideCopyright = false
 
-    hidecredits = false
-    hidecopyright = false
+    # Git Commit in Footer, uncomment the line below to enable it.
+    # commit = "https://github.com/muehlburger/muehlburger.github.io.git/"
 
     rtl = false
 
-    math = true
+    # Use inverted colors
+    inverted = false
+
+    # Series see also post count
+    maxSeeAlsoItems = 5
+
+    # Custom CSS
     custom_css = ["css/custom.css"]
+
+[taxonomies]
+  series = "series"
 
 # Social links
 [[params.social]]
@@ -56,46 +73,36 @@ pygmentscodefencesguesssyntax = true
 [languages]
     [languages.en]
         languagename = "English" # The language name to be displayed in the selector.
-        title = "muehlburger.at"
 
         # You can configure the theme parameter for each language.
         [languages.en.params]
-            author = "Herbert Muehlburger"
-            info = "Solution Architect and Senior Software Engineer"
-            description = "Herbert Muehlburger's personal website"
-            keywords = "blog, developer"
 
         [languages.en.menu] # It is possible to change the menu too.
 
         [[languages.en.menu.main]]
         name = "About"
-        weight = 1
+        weight = 2
         url = "/about/"
 
         [[languages.en.menu.main]]
         name = "Blog"
-        weight = 2
+        weight = 1
         url = "/posts/"
 
     [languages.de]
         languagename = "Deutsch"
-        title = "muehlburger.at"
 
         [languages.de.params]
-            author = "Herbert Mühlburger"
-            info = "Solution Architect und Senior Software Engineer"
-            description = "Herbert Mühlburgers Website"
             keywords = "blog, developer"
 
         [languages.de.menu]
 
             [[languages.de.menu.main]]
-            name = "Über mich"
-            weight = 1
-            url = "/de/about/"
-
-            [[languages.de.menu.main]]
             name = "Blog"
-            weight = 2
+            weight = 1
             url = "/de/posts/"
 
+            [[languages.de.menu.main]]
+            name = "About"
+            weight = 2
+            url = "/de/about/"
