--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
 baseURL = "https://blog.muehlburger.at"
-title = "DI Herbert Mühlburger"
+title = "DI Herbert Muehlburger"
 
 theme = "hugo-coder"
 
 languagecode = "en"
 defaultcontentlanguage = "en"
 
-paginate = 20
+paginate = 10
 canonifyurls = true
 
 pygmentsstyle = "b2"
@@ -16,7 +16,7 @@ pygmentscodefencesguesssyntax = true
 #disqusShortname = "yourdiscussshortname"
 
 [params]
-    author = "DI Herbert Mühlburger"
+    author = "DI Herbert Muehlburger"
     description = "Experienced Technology Architect and Senior Software Engineer."
     keywords = "Herbert Mühlburger, Herbert Muehlburger, Technology Architect, Senior Software Engineer"
     info = "Technology Architect // Senior Software Engineer"
