--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 #disqusShortname = "yourdiscussshortname"
+googleAnalytics = "UA-131790127-1"
 
 [params]
     author = "DI Herbert Muehlburger"
