update some content

--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ googleAnalytics = "UA-131790127-1"
     keywords = "IT-ZT, Herbert Mühlburger, Mühlburger, Muehlburger, Information Technology, IT, Herbert Mühlburger, Herbert Muehlburger, Technology Architect, Senior Software Engineer"
     info = "IT-Ziviltechniker // Solution Architect // Senior Software Engineer"
     avatarurl = "images/avatar.jpg"
-    footercontent = "🔥 for tech. Fire hire at 👉 <a href='https://www.it-zt.at' target='_blank'>www.it-zt.at</a> 👈"
+    footercontent = "🔥 for tech. Hire me! 👉 <a href='https://www.it-zt.at' target='_blank'>www.it-zt.at</a> 👈"
 
     dateformat = "January 2, 2006"
 
